[package]
name = "noipv6"
version = "0.1.0"
authors = ["Startd with No-IP Team <support@noip.com>, nodifed by Ghiora Drori"]
description = "No-IP Dynamic Update Client (https://www.noip.com)"
license = "Apache-2.0"
homepage = "https://www.noip.com"
edition = "2021"

[[bin]]
name = "noipv6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syslog = "6.0.1"
sysinfo = "0.26.0"
hostname = "0.3.1"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
anyhow = "^1"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
base64 = "^0.13"
byteorder = "^1.4"
clap = { version = "^3.1.6", features = ["cargo", "derive", "env"] }
daemonize = "^0.4"
env_logger = "^0.9"
form_urlencoded = "^1"
humantime = "^2"
log = "^0.4"
minreq = { version = "^2.6", features = ["https-rustls"] }
# Remove the rustls version pin when https://github.com/rustls/rustls/pull/1013 is released (0.20.5+, likely)
rustls = "=0.20.2"
percent-encoding = "^2"
thiserror = "1"

# the docs for trust-dns-resolver say you should not use it for dynamic dns.. 
#https://docs.rs/trust-dns-resolver/latest/trust_dns_resolver/index.html
dns-lookup="^1.0.8"

local-ip-address = "^0.4.5"
url = "^2.2"
ipnet = "2.5.0"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 'z'
panic = 'abort'

[package.metadata.deb]
section = "net"
maintainer-scripts = "debian/"
systemd-units = { enable = false }


